refactor: cleanup, bloqueio local, OAuth e correções
- Remove VPN/DNS; adiciona BlockingModule e bloqueio via AccessibilityService
- Corrige ESLint/TypeScript (ChildRestrictedScreen, ConfigScreen, WelcomeScreen, oneSignalService)
- Adiciona blacklistSyncService, restrictedModeService
- Melhora fluxo OAuth e validação Supabase
- Move SHIELD_VPN_DNS_ARCHITECTURE para docs/archive
- Ajusta ChildModeScreen, shieldService, useShieldStatus
- Exclui api/ do tsconfig; adiciona AUTH_OAUTH_CHECKLIST

Made-with: Cursor

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Sentinela</string>
-    <string name="accessibility_service_description">O Sentinela usa este serviço para bloquear aplicativos na lista de restrição. Ao abrir um app bloqueado, você será redirecionado para a tela inicial.</string>
+    <string name="accessibility_service_description">O Sentinela usa este serviço para bloquear aplicativos e sites na lista de proteção. Ao abrir um app ou site bloqueado, você será redirecionado para a tela inicial.</string>
 </resources>
